<resources>
    <string name="app_name">PCB</string>
    <string name="start">Start</string>
    <string name="procesor">Procesor</string>
    <string name="karta_graficzna">Karta graficzna</string>
    <string name="p_yta_g_wna">Płyta główna</string>
    <string name="intel_lub_amd">Intel lub AMD</string>
    <string name="obudowa">Obudowa</string>
    <string name="ch_odzenie">Chłodzenie</string>
    <string name="dysk">Dysk</string>
    <string name="zasilacz">Zasilacz</string>
    <string name="pami_ram">Pamięć RAM</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_c_p_u_">CPU_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pc_tower">pc_tower</string>
    <string name="pc_builder">PC Builder</string>
    <string name="cpu_image">cpu_image</string>
    <string name="gpu_image">gpu_image</string>
    <string name="mobo_image">mobo_image</string>
    <string name="tower_image">tower_image</string>
    <string name="fan_image">fan_image</string>
    <string name="ram_image">ram_image</string>
    <string name="disk_image">disk_image</string>
    <string name="psu_image">psu_image</string>
    <string name="cpu_text">
KROK 1: MONTAŻ PROCESORA \n\n
        Części:\n &#160;&#160;&#9679;płyta główna\n  &#160;&#160;&#9679;procesor\n\n
Wyjmij płytę główną z opakowania antystatycznego i umieść ją na powierzchni roboczej. Znajdź gniazdo procesora, które powinno być pokryte plastikową zaślepką ochronną. \n
W jednym z narożników plastikowej zaślepki, lub częściej na samym gnieździe, zobaczysz małą strzałkę – zwróć uwagę na jej położenie. \n
Obok gniazda procesora zobaczysz małą metalową dźwignię. Naciśnij ją i delikatnie pociągnij na bok (z dala od gniazda), aby otworzyć tacę gniazda. \n
Otwórz procesor i wyjmij go z opakowania. \n
Podczas pracy z procesorem zachowaj szczególną ostrożność – zarówno procesor, jak i gniazdo procesora są delikatne i bardzo łatwo je uszkodzić. \n
Trzymaj procesor za krawędzie – w żadnym wypadku nie dotykaj styków na spodzie chipa, ponieważ palce mogą pozostawić na nich kurz lub tłuszcz; staraj się też nie dotykać górnej części chipa.

</string>
    <string name="cpu_mounting_image">cpu_mounting_image</string>
    <string name="cpu_text2">
        \nW jednym rogu procesora zobaczysz strzałkę.\n
        Wyrównaj ją ze strzałką na gnieździe i delikatnie umieść procesor na gnieździe.\n
        Po delikatnym osadzeniu procesora możesz opuścić dźwignię i wcisnąć ją z powrotem na miejsce.\n
        Opuszczenie dźwigni może wymagać użycia pewnej siły, w przeciwieństwie do osadzenia procesora! \n\n
     <font color="#DBA800">   <b><big>Wskazówki!</big></b> \n\n
         Nie musisz zdejmować plastikowej zaślepki – naprężenie powstające podczas montażu procesora spowoduje, że zaślepka sama wyskoczy. Jeśli będziesz próbować zdjąć zaślepkę samodzielnie, może to skończyć się uderzeniem i uszkodzeniem kruchych styków znajdujących się pod spodem.\n
         Procesor można zamontować tylko w jedną stronę i nie potrzeba do tego siły</font>
    </string>
    <string name="cpu_text_amd">KROK 1: MONTAŻ PROCESORA \n\n
        Części:\n &#160;&#160;&#9679;płyta główna\n  &#160;&#160;&#9679;procesor\n\nMontaż procesora AMD rozpoczynamy od odbezpieczenia gniazda na płycie głównej. W tym celu należy odciągnąć do góry znajdującą się obok gniazda metalową dźwignię. Następnie możemy przejść do wyjęcia procesora z plastikowej wytłoczki. Należy to zrobić bardzo powoli i ostrożnie!. Podczas trzymania procesora palcami, starajmy się nie dotykać niepotrzebnie jego metalowej powierzchni. Zatłuszczona powierzchnia znacząco utrudni wymianę ciepła. Poprawna orientacja procesorów AMD w gnieździe jest oznaczana za pomocą małej złotej strzałki znajdującej się na gnieździe oraz procesorze - zarówno na wierzchu, jak i po stronie nóżek (patrz zdjęcia powyżej). Gdy znaleźliśmy już oznaczenia, możemy umieścić ostrożnie procesor w gnieździe. Nóżki podzespołu muszą całkowicie wejść w podstawę gniazda tak, aby płytka procesora zrównała się z nim poziomem. Gdy mamy pewność, że procesor pewnie leży na swoim miejscu, możemy zablokować gniazdo używając znajdującej się obok dźwigni.</string>
    <string name="zbudujmy_komputer">Zbudujmy komputer</string>
    <string name="disk_description1">KROK 2: (OPCJONALNIE) MONTAŻ DYSKÓW SSD M.2\n\n

Części\n &#160;&#160;&#9679;płyta główna\n &#160;&#160;&#9679;dysk SSD M.2\n &#160;&#160;&#9679; wkrętak krzyżakowy\n &#160;&#160;&#9679;instrukcja obsługi płyty głównej\n\n

Jeśli chcesz zamontować dysk SSD M.2, teraz jest na to dobry moment. Najpierw znajdź gniazdo M.2 na płycie głównej. Jest to niewielka, pozioma szczelina z maleńką śrubką. Jeśli nie możesz go znaleźć, a znajdziesz kilka gniazd M.2 lub jeśli planujesz zamontować więcej niż jeden dysk M.2 SSD, zapoznaj się z instrukcją obsługi dołączoną do płyty głównej.\n

Odkręć maleńką śrubkę wkrętakiem krzyżakowym #0. Uważaj, aby jej nie zgubić.\n

Delikatnie wsuń dysk SSD M.2 do gniazda. Całkowicie osadzony dysk będzie odstawał od płyty głównej pod kątem około 35 stopni. Wciśnij dysk SSD do dołu i z powrotem załóż maleńką śrubkę, aby zablokować go na miejscu.</string>
</resources>